Make PWA necessary changes and include the same logos as from frontend

--- a/game/src/index.html
+++ b/game/src/index.html
@@ -39,15 +39,16 @@
     <noscript>Please enable javascript to continue using this application.</noscript>
 
     <!-- installs the serviceWorker -->
-    <!--<script>
+    <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('./sw.js')
         })
       }
-    </script>-->
+    </script>
   </head>
   <body>
+    <h1>Amelias flight over the atlantic</h1>
     <div id="phaser-game"></div>
   </body>
 </html>
