Added more subtle element to body to enable PWA pass via lighthouse

--- a/game/src/index.html
+++ b/game/src/index.html
@@ -48,7 +48,7 @@
     </script>
   </head>
   <body>
-    <h1>Amelias flight over the atlantic</h1>
+    <div>Loading...</div>
     <div id="phaser-game"></div>
   </body>
 </html>
